--- a/my-spring-boot-app/pom.xml
+++ b/my-spring-boot-app/pom.xml
@@ -29,6 +29,11 @@
 			<artifactId>instana-java-sdk</artifactId>
 			<version>1.2.0</version>
 		</dependency>
+		 <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.13</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
